전체 도메인 설계 수정